# voice_chatbot

./: README.md  example.env  main.py  pyproject.toml
config/: config.py  config.yaml
src/audio/: deepgram_speaker.py
src/document_processing/: extractor.py
src/llms/groq/: interface.py
src/rag/: rag_system.py
src/session/: conversation_manager.py
src/transcription/: transcriber.py
